# smart_talkflow

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: ruff_postuse.py
SSD/: 传统业务系统接入 Agent 落地计划 v1.0.md  传统业务系统接入 Agent 落地计划.md  失活流程降级落地计划.md  对话编排链路计划书.md  工作流引擎设计方案.md  提示词加载架构设计与落地计划.md  流程崩溃自动恢复落地计划.md  用户认证与操作权限控制落地计划.md  项目计划书v1.0.md
db/: schema_diagram.md  smart_talkflow_init.sql
src/: main.py
src/adapters/: __init__.py  base.py
src/adapters/oa_adapter/: __init__.py  oa_base.py  oa_client.py  oa_meeting_room.py
src/api/: deps.py  router.py  schema.py
src/conf/: __init__.py  config.py
src/engine/: messages.py  parser.py  query.py  stream_event.py
src/engine/client/: base_client.py  llm_client.py  messages.py
src/engine/prompts/: envirement.py  system_prompt.py
src/infra/: database.py  exceptions.py  http.py  idempotency.py  logger.py  models.py  redis_client.py
src/orchestrator/: base.py  dispatcher.py  downgrade.py  idempotency.py  workflow_engine.py
src/orchestrator/workflow/: meeting_room.py
src/permission/: permission.py
src/prompts/: __init__.py  context.py  envirement.py  environment.py  system_prompt.py
src/repository/: models.py  process_tracker.py  step_tracker.py
src/runtime/: context.py  heartbeat.py  runner.py
src/security/: jwks_client.py
src/services/: credential.py
src/utils/: api_key_util.py  trace_id_util.py
tests/: __init__.py  test_audit_logging.py  test_config.py  test_database.py  test_deps.py  test_dispatcher_e2e.py  test_http.py  test_idempotency.py  test_llm_client.py  test_logger.py  test_meeting_room_workflow.py  test_prompts_context.py  test_sso.py  test_step_tracker.py  test_system_prompt.py  test_verify_query_streaming.py
